# live-transcription

./: .gitignore  Makefile  README.md  SETUP_GUIDE.md  bench_errors.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
backend/: audio_capture.py  config.py  server.py  transcriber.py
frontend/: app.js  index.html  style.css
tests/: bench_quick.py  benchmark_models.py  test_latency.py
tests/e2e/: conftest.py  test_app.py
tests/fixtures/: README.md
